Fix for invisible top borders in rendered HTML tables (#359)
* Update gt_styles_default.scss

* Fix a testthat test

--- a/inst/css/gt_styles_default.scss
+++ b/inst/css/gt_styles_default.scss
@@ -126,9 +126,9 @@
   .gt_row {
     padding: $row_padding; /* row.padding */
     margin: 10px;
-    border-bottom-style: solid;
-    border-bottom-width: thin;
-    border-bottom-color: #D3D3D3;
+    border-top-style: solid;
+    border-top-width: 1px;
+    border-top-color: #D3D3D3;
     vertical-align: middle;
     overflow-x: hidden;
   }
